# intel-ec-server

./: .dockerignore  .env.docker  .env.example  .env.example.backup  .env.local  .gitignore  .pre-commit-config.yaml  .ruff.toml  API_DOCUMENTATION_GUIDE.md  FINAL_SOLUTION.md  GATEWAY_AUTH_WHITELIST_ANALYSIS.md  LATEST_FIXES_SUMMARY.md  LOCAL_STARTUP_GUIDE.md  README.md  STARTUP_SCRIPT_FIXES.md  WEBSOCKET_403_DIAGNOSIS.md  WEBSOCKET_403_FINAL_FIX.md  WEBSOCKET_404_DIAGNOSIS_FINAL.md  WEBSOCKET_API_ACCESS_GUIDE.md  WEBSOCKET_AUTH_FIX.md  WEBSOCKET_AUTH_FIXES_SUMMARY.md  WEBSOCKET_AUTH_OPTIMIZATION.md  WEBSOCKET_COMPLETE_FIX.md  WEBSOCKET_ERROR_HANDLING_FIX.md  WEBSOCKET_FIX.md  WEBSOCKET_FIX_SUMMARY.md  WEBSOCKET_FORMAT_UPDATE.md  WEBSOCKET_HEARTBEAT_FIX.md  WEBSOCKET_QUICK_START.md  docker-compose.yml  log.txt  mypy.ini  paswords.txt  pyproject.toml  pyrightconfig.json  requirements.txt  test_oauth_fix.sh  test_websocket_correct.py
.zed/: tasks.json
docs/: 00-quick-start.md  01-external-database-setup.md  01-infrastructure-config.md  02-external-services-config.md  03-deployment-guide.md  04-project-setup.md  05-monitoring-setup-complete.md  06-grafana-dashboard-guide.md  07-monitoring-quick-reference.md  08-code-quality-setup.md  09-python38-compatibility.md  10-nacos-troubleshooting.md  11-jaeger-storage-config.md  12-authentication-architecture.md  13-code-quality-tools-analysis.md  14-pyright-quick-guide.md  15-pyright-fixes-summary.md  16-pyright-troubleshooting.md  17-pyright-overview.md  18-api-response-format-fixes.md  18-websocket-usage.md  19-service-logs-guide.md  20-redis-token-blacklist-diagnosis.md  20-service-ip-port-config-explanation.md  21-shared-modules.md  22-code-refactoring-optimization.md  22-shared-utils.md  23-monitoring-metrics-enhancement.md  23-shared-modules-usage-audit.md  24-422-validation-error-fix.md  24-testing-websocket.md  25-infrastructure-grafana-datasources.md  26-scripts-guide.md  27-code-optimization.md  28-host-service-e2e-testing.md  29-host-service-performance-testing.md  (+66 more)
(+372 files in other folders)
